[gd_scene load_steps=4 format=3 uid="uid://cwxkcv2kn5g6v"]

[ext_resource type="Script" uid="uid://crhwurlaaipbd" path="res://Scripts/menu_ganador.gd" id="1_hkwp3"]
[ext_resource type="Texture2D" uid="uid://sxtkshn53eat" path="res://Assets/background_fondo.png" id="1_p5jx0"]
[ext_resource type="Theme" uid="uid://iexdiuxut7gi" path="res://Assets/GUI/tema_menu.tres" id="2_jbre6"]

[node name="menu_ganador" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hkwp3")

[node name="BackgroundFondo" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(576, 324)
scale = Vector2(0.24, 0.24)
texture = ExtResource("1_p5jx0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_right = 126.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jbre6")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_jbre6")

[node name="Casilla0" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="new_game" type="Button" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
text = "NUEVA PARTIDA"

[node name="menu" type="Button" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "VOLVER AL MENÃš"

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/menu" to="." method="_on_menu_pressed"]
